<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">WorldCraft</string>
    <string name="play">Play</string>
    <string name="cancel">Cancel</string>
    <string name="multiplayer">Multiplayer</string>
    <string name="please_wait">Please wait</string>
    <string name="connectiong_to_server">Connecting to server…</string>
    <string name="create_game">Create Room</string>
    <string name="upload_room">Upload Room</string>
    <string name="chat">Chat</string>
    <string name="your_message">Your message</string>
    <string name="loading">Loading…</string>
    <string name="error">Error</string>
    <string name="refresh">Refresh</string>
    <string name="red_man">Red</string>
    <string name="sensei_man">Sensei</string>
    <string name="military_man">Military</string>
    <string name="pirate">Pirate</string>
    <string name="cop">Cop</string>
    <string name="eagle_eye">Eagle Eye</string>
    <string name="flash">Flash</string>
    <string name="bee">Bee</string>
    <string name="robo">Robo</string>
    <string name="tux">Tux</string>
    <string name="enter_room_name">Enter a room name</string>
    <string name="enter_room_password">Enter a room password</string>
    <string name="please_enter_room_name">Please enter a room name</string>
    <string name="connection_lost">Sorry! Connection lost. Please try again later</string>
    <string name="no_rooms_message">Sorry! There are no rooms on the server. Please try again later or create your own room</string>
    <string name="wrong_world_name">Sorry! The world name you typed is unacceptable. Please enter another world name</string>
    <string name="world_name">World name</string>
    <string name="save_world">Save World</string>
    <string name="would_you_like_to_save_world">Would you like to save the world?</string>
    <string name="connection_lost_would_you_like_to_save_world">Sorry! Connection lost. Would you like to save the world?</string>
    <string name="dont_save">Don\'t Save World</string>
    <string name="multiplayer_game">Multiplayer game</string>
    <string name="loading_please_wait">Loading. Please wait…</string>
    <string name="upload_world_failed">Unable to upload the world</string>
    <string name="read_world_failed">Unable to read the world file</string>
    <string name="download_world_failed">Unable to download the world</string>
    <string name="please_turn_on_network">Please turn on Wi-Fi or Mobile Network</string>
    <string name="like_it">Like?</string>
    <string name="did_you_like_this_world">Do you like this world?</string>
    <string name="like">Like</string>
    <string name="dislike">Dislike</string>
    <string name="search">Search</string>
    <string name="room_name">Room Name</string>
    <string name="search_no_rooms">No results</string>
    <string name="search_results">Search Results</string>
    <string name="back">Back</string>
    <string name="emily">Emily</string>
    <string name="diana">Diana</string>
    <string name="jessica">Jessica</string>
    <string name="victoria">Victoria</string>
    <string name="rachel">Rachel</string>
    <string name="jennifer">Jennifer</string>
    <string name="lily">Lily</string>
    <string name="mary">Mary</string>
    <string name="caroline">Caroline</string>
    <string name="vanessa">Vanessa</string>
    <string name="send">Send</string>
    <string name="please_enter_your_complaint">Please enter your complaint</string>
    <string name="report_abuse">Report Abuse</string>
    <string name="skin">Skin</string>
    <string name="name">Name</string>
    <string name="please_choose_player">Please choose player</string>
    <string name="no_message_from_player">No messages from %1$s</string>
    <string name="please_enter_report_description">Please enter the report description</string>
    <string name="are_you_sure_you_want_to_send_this_report">Are you sure you want to send this report?</string>
    <string name="warning">Warning</string>
    <string name="error_login_already_logged_in">Sorry! User with this name is already logged in</string>
    <string name="error_login_null_player">General failure. Please try again later</string>
    <string name="error_login_ip_blacklisted">Sorry! Your IP address is blacklisted</string>
    <string name="error_login_device_id_blacklisted">Sorry! Your device is blacklisted</string>
    <string name="error_login_bad_word">Sorry! Your name contains bad words. Please use another user name</string>
    <string name="error_login_too_long">Sorry! Your name is too long. Please use another user name</string>
    <string name="error_login_name_forbidden">Sorry! Your name contains forbidden characters. Please use alphanumeric characters</string>
    <string name="error_login_null_player_name">Sorry! You are trying to login using null name. Please use another user name</string>
    <string name="error_login_unknown_error">Sorry! An unknown error happened. Please, try again later</string>
    <string name="its_all_over">Its All Over!</string>
    <string name="respawn">Respawn</string>
    <string name="quit_to_title">Quit to title</string>
    <string name="back_to_game">Back to game</string>
    <string name="player_list">Players list</string>
    <string name="error_create_room_null_user">Error has occurred while trying to create room for null user</string>
    <string name="error_create_room_non_logged_in_user">Error has occurred while trying to create room for non-logged in user</string>
    <string name="error_create_room_name_exists">Sorry! The room name %1$s already exists</string>
    <string name="error_create_room_failed">Sorry! Unable to create the room %1$s</string>
    <string name="error_create_room_bad_word">Sorry! The room name contains bad words</string>
    <string name="error_create_room_name_too_long">Sorry! The room name is too long</string>
    <string name="error_create_room_name_forbidden">Sorry! The room name contains forbidden characters. Please use alphanumeric characters</string>
    <string name="error_create_room_password_too_long">Sorry! The room password is too long</string>
    <string name="unable_to_create_room">Unable to create the room</string>
    <string name="error_join_room_failed">Unable to join the room</string>
    <string name="enter_room_failed_wrong_password">Sorry! The password you typed is incorrect</string>
    <string name="error_join_room_doesnt_exist">Sorry! The room doesn\'t exist</string>
    <string name="singleplayer_game">Singleplayer game</string>
    <string name="option">Option</string>
    <string name="worldcraft">WorldCraft</string>
    <string name="create">Create</string>
    <string name="survival">Survival</string>
    <string name="modified_at">Modified at</string>
    <string name="mode">Mode</string>
    <string name="delete">Delete</string>
    <string name="title_activity_singleplayer">SingleplayerActivity</string>
    <string name="menu_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="creative">Creative</string>
    <string name="are_you_realy_want_to_delete_map">Do you really want to delete %1$s?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="new_game">New game</string>
    <string name="enter_world_name">Enter the world name</string>
    <string name="random_map">Random map</string>
    <string name="flat_map">Flat map</string>
    <string name="predefined_map">Predefined map</string>
    <string name="title_activity_new_game_singleplayer">NewGameSingleplayerActivity</string>
    <string name="select_world">Select World</string>
    <string name="start">Start</string>
    <string name="version">Version: %1$s</string>
    <string name="lock_image">lock_image</string>
    <string name="user_count">100/100</string>
    <string name="more_games">More Games</string>
    <string name="storage_not_found">Sorry! The storage not found on your handset</string>
    <string name="please_create_world">Sorry! There are no saved worlds. Create world in a creative mode please</string>
    <string name="market_not_found">Sorry! The market application not found on your handset</string>
    <string name="update">Update</string>
    <string name="download">Download</string>
    <string name="read_only">Read-only</string>
    <string name="modification_read_only_world_warning">This world is read-only. If you want to modify this world you have to save it and open in a singleplayer mode</string>
    <string name="you_may_not_rest_now_there_are_monsters">You may not rest now, the monsters are nearby</string>
    <string name="you_can_sleep_only_at_night">You can sleep only at night</string>
    <string name="enter_room_failed_player_limit_exceeded">Sorry! The Player limit of this room is exceeded. Please try again later or try to join another room</string>
</resources>
