<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="16dp">

    <Button
        android:id="@+id/quitButton"
        android:layout_width="244dp"
        android:layout_height="wrap_content"
        android:text="@string/quit_to_title" />

    <Button
        android:id="@+id/backButton"
        android:layout_width="244dp"
        android:layout_height="wrap_content"
        android:text="@string/back_to_game" />

    <Button
        android:id="@+id/playerListButton"
        android:layout_width="244dp"
        android:layout_height="wrap_content"
        android:text="@string/player_list" />
</LinearLayout>
