<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/no_rooms_message"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="14dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/createButtom"
            android:background="@drawable/ic_button_selector"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.32"
            android:text="@string/create_game" />

        <Button
            android:id="@+id/refreshButtom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.32"
            android:background="@drawable/ic_button_selector"
            android:text="@string/refresh" />

        <Button
            android:id="@+id/cancelButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.32"
            android:background="@drawable/ic_button_selector"
            android:text="@android:string/cancel" />

    </LinearLayout>

</LinearLayout>
