<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_vertical"
        android:layout_marginStart="128dp"
        android:layout_marginEnd="128dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/worldcraft"
                android:scaleType="centerInside"
                android:src="@drawable/title" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:weightSum="2">

            <com.mcal.worldcraft.dialog.component.MolotButton
                android:id="@+id/singlePlyerButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/ic_button_selector"
                android:text="@string/singleplayer_game"
                android:textSize="@dimen/main_menu_button_text_size" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="top"
                android:orientation="horizontal"
                android:weightSum="2">

                <com.mcal.worldcraft.dialog.component.MolotButton
                    android:id="@+id/multiplayerButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_weight="1"
                    android:background="@drawable/ic_button_selector"
                    android:text="@string/multiplayer_game"
                    android:textSize="@dimen/main_menu_button_text_size" />

                <com.mcal.worldcraft.dialog.component.MolotButton
                    android:id="@+id/optionButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:layout_weight="1"
                    android:background="@drawable/ic_button_selector"
                    android:text="@string/option"
                    android:textSize="@dimen/main_menu_button_text_size" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
