<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center"
    android:orientation="vertical"
    android:clipChildren="false"
    android:clipToPadding="false"
    android:padding="10dp">

    <LinearLayout
        android:id="@+id/level_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:weightSum="4">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            app:cardCornerRadius="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="8dp">

                <ImageView
                    android:id="@+id/game_mode_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="3"
                    android:contentDescription="@string/survival"
                    android:src="@drawable/world_survival" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <RelativeLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">

                        <com.solverlabs.worldcraft.dialog.component.MolotTextView
                            android:id="@+id/map_name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/info_block_margin_top"
                            android:text="@string/world_name"
                            android:textColor="@color/map_name_color"
                            android:textSize="@dimen/info_block_map_name_text_size" />

                        <com.solverlabs.worldcraft.dialog.component.MolotTextView
                            android:id="@+id/map_modified_at"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/map_name"
                            android:text="@string/modified_at"
                            android:textColor="@color/map_property_color"
                            android:textSize="@dimen/info_block_text_size" />

                        <com.solverlabs.worldcraft.dialog.component.MolotTextView
                            android:id="@+id/map_mode"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/map_modified_at"
                            android:text="@string/mode"
                            android:textColor="@color/map_property_color"
                            android:textSize="@dimen/info_block_text_size" />

                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center">

                        <com.solverlabs.worldcraft.dialog.component.MolotButton
                            android:id="@+id/delete_button"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@drawable/ic_button_selector"
                            android:text="@string/delete"
                            android:textSize="15dp" />

                    </RelativeLayout>

                </LinearLayout>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>


</LinearLayout>
