<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/dialog_background" />

    <RelativeLayout
        android:id="@+id/title_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom|center_horizontal">

        <com.solverlabs.worldcraft.dialog.component.MolotTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/main_menu_margin"
            android:text="@string/create_game"
            android:textColor="@color/title_color"
            android:textSize="@dimen/title_text_size" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/button_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:weightSum="6">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:orientation="horizontal"
            android:weightSum="2">

            <com.solverlabs.worldcraft.dialog.component.MolotButton
                android:id="@+id/back_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/main_menu_margin"
                android:layout_weight="1"
                android:background="@drawable/ic_button_selector"
                android:text="@string/back"
                android:textSize="@dimen/main_menu_button_text_size" />

            <com.solverlabs.worldcraft.dialog.component.MolotButton
                android:id="@+id/start_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/main_menu_margin"
                android:layout_weight="1"
                android:background="@drawable/ic_button_selector"
                android:text="@string/start"
                android:textSize="@dimen/main_menu_button_text_size" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button_bar"
        android:layout_below="@+id/title_bar"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:weightSum="6">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/create_win_margin"
            android:layout_weight="4"
            android:orientation="vertical"
            android:padding="@dimen/create_game_padding">

            <com.solverlabs.worldcraft.dialog.component.MolotEditText
                android:id="@+id/room_name_edit_text"
                android:layout_width="match_parent"
                android:layout_height="@dimen/create_game_element_height"
                android:layout_marginBottom="@dimen/create_game_margin_bottom"
                android:hint="@string/enter_room_name"
                android:textColor="@color/title_color"
                android:textColorHint="@color/hint_color"
                android:textSize="@dimen/create_game_text_size">

                <requestFocus />
            </com.solverlabs.worldcraft.dialog.component.MolotEditText>

            <com.solverlabs.worldcraft.dialog.component.MolotEditText
                android:id="@+id/room_password_edit_text"
                android:layout_width="match_parent"
                android:layout_height="@dimen/create_game_element_height"
                android:layout_marginBottom="@dimen/create_game_margin_bottom"
                android:hint="@string/enter_room_password"
                android:inputType="textPassword"
                android:textColor="@color/title_color"
                android:textColorHint="@color/hint_color"
                android:textSize="@dimen/create_game_text_size" />

            <Spinner
                android:id="@+id/world_spinner"
                android:layout_width="match_parent"
                android:layout_height="@dimen/create_game_element_height"
                android:layout_marginBottom="@dimen/create_game_margin_bottom"

                android:textColor="@color/title_color"
                android:textSize="@dimen/create_game_text_size" />

            <com.solverlabs.worldcraft.dialog.component.MolotCheckBox
                android:id="@+id/read_only_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="@string/read_only"
                android:textColor="@android:color/black"
                android:textSize="@dimen/create_game_text_size" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
