<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_vertical">

    <LinearLayout
        android:id="@+id/title_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <com.mcal.worldcraft.dialog.component.MolotButton
            android:id="@+id/back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/main_menu_margin"
            android:background="@drawable/ic_button_selector"
            android:text="@string/back"
            android:textSize="@dimen/main_menu_button_text_size" />

        <com.mcal.worldcraft.dialog.component.MolotTextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/main_menu_margin"
            android:layout_marginTop="@dimen/main_menu_margin"
            android:layout_marginEnd="@dimen/main_menu_margin"
            android:layout_marginBottom="@dimen/main_menu_margin"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/select_world"
            android:textSize="@dimen/title_text_size" />

        <com.mcal.worldcraft.dialog.component.MolotButton
            android:id="@+id/create_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/main_menu_margin"
            android:background="@drawable/ic_button_selector"
            android:text="@string/create"
            android:textSize="@dimen/main_menu_button_text_size" />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/title_bar"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        tools:listitem="@layout/item_world_list" />

</RelativeLayout>
