<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/title_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom|center_horizontal">

        <com.solverlabs.worldcraft.dialog.component.MolotTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/main_menu_margin"
            android:text="@string/search_results"
            android:textSize="@dimen/title_text_size" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/button_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:weightSum="6">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:gravity="center"
            android:weightSum="2">

            <com.solverlabs.worldcraft.dialog.component.MolotButton
                android:id="@+id/back_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/main_menu_margin"
                android:layout_weight="1"
                android:background="@drawable/ic_button_selector"
                android:text="@string/back"
                android:textSize="@dimen/main_menu_button_text_size" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button_bar"
        android:layout_below="@+id/title_bar"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:weightSum="6">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:orientation="vertical"
            android:padding="@dimen/create_game_padding">

            <RelativeLayout
                android:id="@+id/searchBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.solverlabs.worldcraft.dialog.component.MolotButton
                    android:id="@+id/searchButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:background="@drawable/ic_button_selector"
                    android:text="@string/search"
                    android:textSize="@dimen/main_menu_button_text_size" />

                <com.solverlabs.worldcraft.dialog.component.MolotEditText
                    android:id="@+id/searchText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toLeftOf="@+id/searchButton"
                    android:hint="@string/room_name"
                    android:inputType="text"
                    android:textSize="@dimen/create_game_text_size" />

            </RelativeLayout>

            <ListView
                android:id="@+id/roomList"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:drawSelectorOnTop="false" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
